busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox1
  namespace: default
spec:
  containers:
    - name: busybox1
      image: curlimages/curl:7.84.0
      imagePullPolicy: IfNotPresent
  restartPolicy: Always
# kubectl run mycurlpod --image=curlimages/curl -i --tty -- sh
