elastic-plugin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elastic-plugin
  namespace: elastic
  labels:
    app: elastic-plugin # label for the deployment
spec:
  progressDeadlineSeconds: 600 # timeout for the deployment
  replicas: 1 # number of replicas
  revisionHistoryLimit: 10 # number of revisions to keep
  selector:
    matchLabels:
      app: elastic-plugin # label for the deployment
  strategy:
    rollingUpdate:
      maxSurge: 1 # max number of pods that can be created over the desired number of pods
      maxUnavailable: 0 # max number of pods that can be unavailable during the update
    type: RollingUpdate # type of deployment strategy
  template:
    metadata:
      annotations:
        maintainer: "ian"
      labels:
        app: elastic-plugin # label for the deployment
    spec:
      containers:
        - name: elastic-plugin # name of the container
          image: "ianunruh/elastic-plugin:latest" # image to use
          imagePullPolicy: Always # always pull the image
          ports:
            - containerPort: 8080 # port to expose
          resources:
            limits:
              cpu: 100m # max cpu usage
              memory: 128Mi # max memory usage
            requests:
              cpu: 100m # min cpu usage
              memory: 128Mi # min memory usage
