service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-origin-svc
  labels:
    app: goorigin
spec:
  # NOTE: depending on which version of the book you have, this may say port 9999. The latest version of the book uses 8888 to match the pod.
  type: LoadBalancer # 一个负载均衡类型的资源 nodeport 的扩展类型
  ports:
    - name: init #
      port: 8008
      targetPort: 8008
    - name: mongodb
      port: 27017
      targetPort: 27017
    - port: 2345
      name: dlv
      targetPort: 2345
  selector:
    app: go-origin # 凡是 app=ian 的都会被匹配到
